[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/work/dialoger.gd" type="Script" id=1]
[ext_resource path="res://textures/sprites/Work/boss_1.png" type="Texture" id=2]
[ext_resource path="res://fonts/Minimal5x7S36.tres" type="DynamicFont" id=3]
[ext_resource path="res://textures/sprites/Work/boss.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="dialoger" type="Node2D"]
script = ExtResource( 1 )

[node name="dialog_timer" type="Timer" parent="."]
wait_time = 12.0

[node name="boss_dialog_timer" type="Timer" parent="."]
wait_time = 13.0
autostart = true

[node name="textbox" type="ColorRect" parent="."]
visible = false
margin_left = -200.0
margin_top = -256.0
margin_right = 200.0
margin_bottom = -100.0
color = Color( 0.0470588, 0.0980392, 0.286275, 0.635294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog" type="Label" parent="textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.90735e-06, -1.90735e-06 )
scale = Vector2( 2.56, 2.56 )
frames = SubResource( 1 )
frame = 1
playing = true
[connection signal="timeout" from="dialog_timer" to="." method="_on_dialog_timer_timeout"]
[connection signal="timeout" from="boss_dialog_timer" to="." method="_on_boss_dialog_timer_timeout"]
